--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@nuxtjs/auth": "^4.8.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/toast": "^3.2.1",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "jquery": "^3.4.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
